# Luz

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
.github/workflows/: Ubuntu.yml  Windows.yml
assets/: cube.glb  cube.mtl  default.luz  references.txt
assets/models/: references.txt  teapot.mtl
scripts/: font_bitmap_generator.py
source/Core/: Base.hpp  FileManager.cpp  FileManager.hpp  Log.cpp  Log.hpp  Luzpch.hpp  Profiler.cpp  Profiler.hpp  Resources.cpp  Resources.hpp  Util.cpp  Util.hpp  main.cpp
source/Graphics/: AssetManager.cpp  AssetManager.hpp  AssetManager2.cpp  AssetManager2.hpp  Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  DebugDraw.cpp  DebugDraw.h  DeferredRenderer.cpp  DeferredRenderer.hpp  Editor.cpp  Editor.h  GPUScene.cpp  GPUScene.hpp  ImGuiLayer.cpp  ImGuiLayer.h  Light.cpp  Light.hpp  Lights.hpp  Material.hpp  MaterialManager.cpp  MaterialManager.hpp  Mesh.cpp  Mesh.hpp  MeshManager.cpp  MeshManager.hpp  Model.hpp  PBRGraphicsPipeline.cpp  PBRGraphicsPipeline.hpp  PhongGraphicsPipeline.cpp  PhongGraphicsPipeline.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  (+8 more)
source/Resources/: AssetIO.cpp  AssetIO.hpp  AssetManager.cpp  AssetManager.hpp  AssetManager2.cpp  AssetManager2.hpp  GPUScene.cpp  GPUScene.hpp  Managers.hpp  Serializer.hpp
source/Shaders/: LuzCommon.h  Shared.hpp  ambientOcclusion.frag  atmospheric.comp  atmosphericUtils.glsl  base.glsl  common.h  debug.frag  debug.vert  denoiserAtrous.comp  envmap.frag  envmap.vert  floatBlur.frag  font.frag  font.vert  histogram.comp  histogramAverage.comp  light.frag  light.vert  lineRendering.comp  opaque.frag  opaque.vert  panoramaToCube.frag  panoramaToCube.vert  pbr.frag  pbr.vert  phong.frag  phong.vert  postProcessing.comp  present.frag  quadPass.vert  rayTracingBase.glsl  rgbaBlur.frag  rt.rchit  rt.rgen  rt.rmiss  rtShadow.rmiss  screenSpaceVolumetricLight.comp  shader.frag  shader.vert  (+13 more)
source/Vulkan/: BufferManager.cpp  BufferManager.hpp  Buffers.cpp  Buffers.hpp  BuffersManager.cpp  BuffersManager.hpp  DeferredRenderer.cpp  DeferredRenderer.hpp  Descriptors.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  GraphicsPipelineManager.cpp  GraphicsPipelineManager.hpp  Image.cpp  Image.hpp  ImageManager.cpp  ImageManager.hpp  Instance.cpp  Instance.hpp  LogicalDevice.cpp  LogicalDevice.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  RayTracing.cpp  RayTracing.hpp  RenderingPass.cpp  RenderingPass.hpp  Shader.cpp  Shader.hpp  SwapChain.cpp  SwapChain.hpp  VulkanLayer.cpp  VulkanLayer.h  VulkanUtils.h  VulkanUtils.hpp  Window.cpp  Window.hpp
